--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Gestão de Tecnologia da Informação</h1>
-    <h2>Faculdade de Tecnologia de Tatuí</h2>
+    <h3>Faculdade de Tecnologia de Tatuí</h3>
+    <h4>Desenvolvedor: Felipe</h4>
     
 </body>
 </html>
