--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Gestão de Tecnologia da Informação</h1>
     <h3>Faculdade de Tecnologia de Tatuí</h3>
     <h4>Desenvolvedor: Felipe</h4>
+    <hr>
+    <h5>Versão 1.0 - @copyright</h5>
     
 </body>
 </html>
